--- a/index.html
+++ b/index.html
@@ -3,32 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>机器人技术分析器 (自动更新版)</title>
+    <title>🤖 Robot Genesis | 机器人创世纪</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-sankey/0.12.3/d3-sankey.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* CSS样式与之前版本相同，为了简洁此处省略，您可以从上一个版本复制粘贴 */
-        * { margin: 0; padding: 0; box-sizing: border-box; } body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif; background: #f0f2f5; color: #333; } .container { max-width: 1200px; margin: 0 auto; padding: 20px; } .header { text-align: center; margin-bottom: 30px; } .header h1 { font-size: 2.5rem; color: #1a1a1a; } .header p { color: #666; font-size: 1.1rem; } .search-box { background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); } .search-input { width: 100%; padding: 15px 20px; border: 1px solid #ddd; border-radius: 8px; font-size: 16px; } .search-btn { width: 100%; background: #007bff; color: white; border: none; padding: 15px 30px; border-radius: 8px; margin-top: 15px; cursor: pointer; font-size: 18px; font-weight: bold; } .results { margin-top: 30px; } .robot-card { background: white; padding: 25px; margin: 15px 0; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); } #sankey-diagram { width: 100%; height: 450px; margin: 30px 0; background: white; border-radius: 12px; padding: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); } .loader { text-align: center; padding: 20px; }
+        :root {
+            --bg-color: #1a1a1d;
+            --card-bg: #2c2c31;
+            --primary-color: #61dafb;
+            --text-color: #e6e6e6;
+            --text-muted: #9a9a9a;
+            --border-color: rgba(255, 255, 255, 0.1);
+        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: 'Inter', 'Microsoft YaHei', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        .header h1 {
+            font-size: 3rem;
+            font-weight: 700;
+            background: linear-gradient(90deg, var(--primary-color), #ff6b6b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 10px;
+        }
+        .header p {
+            color: var(--text-muted);
+            font-size: 1.1rem;
+        }
+        .search-box {
+            position: relative;
+            margin-bottom: 40px;
+        }
+        .search-input {
+            width: 100%;
+            padding: 20px 60px 20px 25px;
+            border: 1px solid var(--border-color);
+            border-radius: 50px;
+            background-color: var(--card-bg);
+            color: var(--text-color);
+            font-size: 18px;
+            outline: none;
+            transition: all 0.3s ease;
+        }
+        .search-input:focus {
+            border-color: var(--primary-color);
+            box-shadow: 0 0 20px rgba(97, 218, 251, 0.2);
+        }
+        .search-btn {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: var(--primary-color);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            color: #000;
+            transition: all 0.3s ease;
+        }
+        .search-btn:hover {
+            transform: translateY(-50%) scale(1.1);
+        }
+        .results-container {
+            display: none;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.5s ease;
+        }
+        .results-container.visible {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+        .robot-card {
+            background: var(--card-bg);
+            border: 1px solid var(--border-color);
+            border-radius: 20px;
+            padding: 30px;
+            margin-bottom: 30px;
+        }
+        .robot-card h2 {
+            font-size: 2rem;
+            color: var(--primary-color);
+            margin-bottom: 15px;
+        }
+        .spec-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .spec-item {
+            background: rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            border-radius: 10px;
+            text-align: center;
+        }
+        .spec-item strong {
+            display: block;
+            color: var(--text-muted);
+            font-size: 0.9rem;
+            margin-bottom: 5px;
+        }
+        .module-section h3, .sankey-section h3 {
+            font-size: 1.5rem;
+            border-bottom: 2px solid var(--primary-color);
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        .module-item {
+            margin-bottom: 15px;
+        }
+        #sankey-diagram {
+            width: 100%;
+            height: 450px;
+        }
+        #sankey-diagram text { fill: var(--text-muted); }
+        .status-message {
+            text-align: center;
+            padding: 40px;
+            background: var(--card-bg);
+            border-radius: 20px;
+            color: var(--text-muted);
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>🤖 机器人分析器 (自动更新版)</h1>
-            <p>数据每日自动从网络抓取，保持最新</p>
-        </div>
-        
-        <div class="search-box">
-            <input type="text" id="robotInput" class="search-input" placeholder="正在加载机器人列表...">
-            <button onclick="searchRobot()" class="search-btn">🔍 分析</button>
-        </div>
-        
-        <div id="results" class="results">
-            <div class="loader">正在从云端加载最新数据...</div>
-        </div>
-        <div id="sankey-diagram"></div>
-    </div>
+        <header class="header">
+            <h1>🤖 Robot Genesis</h1>
+            <p>探索机器人宇宙 | 社区驱动，自动更新</p>
+        </header>
 
+        <div class="search-box">
+            <input type="text" id="robotInput" class="search-input" placeholder="正在加载机器人列表..." disabled>
+            <button onclick="searchRobot()" class="search-btn">🔍</button>
+        </div>
+
+        <div id="status" class="status-message">正在从云端同步最新数据...</div>
+
+        <div id="resultsContainer" class="results-container">
+            <div id="robotInfo" class="robot-card"></div>
+            <div class="sankey-section robot-card">
+                <h3>技术与供应链图谱</h3>
+                <div id="sankey-diagram"></div>
+            </div>
+        </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
